--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - ./cms.app.com.br:/var/www/html/cms.app.com.br
       - ./apis.app.com.br:/var/www/html/apis.app.com.br
       - ./notify.app.com.br:/var/www/html/notify.app.com.br
-      - ./www.appsexpress.com.br:/var/www/html/www.appsexpress.com.br
-      - ./intranet.appsexpress.com.br:/var/www/html/intranet.appsexpress.com.br
+      - ./www.app.com.br:/var/www/html/www.app.com.br
+      - ./intranet.app.com.br:/var/www/html/intranet.app.com.br
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app-php8
@@ -40,8 +40,8 @@ services:
   app-php56:
     image: php:5.6-fpm
     volumes:
-      - ./www.appsexpress.com.br:/var/www/html/www.appsexpress.com.br
-      - ./intranet.appsexpress.com.br:/var/www/html/intranet.appsexpress.com.br
+      - ./www.app.com.br:/var/www/html/www.app.com.br
+      - ./intranet.app.com.br:/var/www/html/intranet.app.com.br
     build:
       context: ./php/56
       dockerfile: Dockerfile
